--- a/preco.css
+++ b/preco.css
@@ -1,5 +1,5 @@
 .preco {
-	background: #f7f7f7;
+	background: #f178eb3a;
 	padding: 60px;
 	display: flex;
 	flex-wrap: wrap;
@@ -8,7 +8,7 @@
 
 .preco-item {
 	flex: 1 1 260px;
-	border: 4px solid white;
+	border: 4px solid rgb(247, 212, 232);
 	padding: 20px;
 	margin: 10px;
 }
@@ -28,8 +28,8 @@
 	text-align: center;
 	font-weight: bold;
 	padding: 10px 0 5px 0;
-	border-top: 4px solid white;
-	border-bottom: 4px solid white;
+	border-top: 4px solid rgb(247, 212, 232);
+	border-bottom: 4px solid rgb(247, 212, 232);
 }
 
 .preco-item sup {
@@ -65,12 +65,21 @@
 	display: block;
 	margin: 20px auto;
 	border: 4px solid;
-	color: #222222;
+  color: #FA517F;
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 2.25em;
 	padding: 15px 0;
 	text-align: center;
+  transition-duration: 450ms;
+}
+
+.preco-item a:hover {
+	transform: scale(1.02);
+  transition-duration: 600ms;
+  background-color: #FA517F;
+  color: white;
+  border: 0px;
 }
 
 @media (max-width: 800px) {
